--- a/readme
+++ b/readme
@@ -212,7 +212,7 @@ What are the CPU times consumed by the programs from Parts 2a, 2b, 2d,
 
 Part 2a:  11.981942 seconds
 
-Part 2b:  _____ seconds
+Part 2b:  2.616389 seconds
 
 Part 2d:  _____ seconds
 
