--- a/readme
+++ b/readme
@@ -214,7 +214,7 @@ Part 2a:  11.981942 seconds
 
 Part 2b:  2.616389 seconds
 
-Part 2d:  _____ seconds
+Part 2d:  8.580985 seconds
 
 Part 2e:  _____ seconds
 
