--- a/readme
+++ b/readme
@@ -216,7 +216,7 @@ Part 2b:  2.616389 seconds
 
 Part 2d:  8.580985 seconds
 
-Part 2e:  _____ seconds
+Part 2e:  4.233605 seconds
 
 Part 2f:  _____ seconds
 
